force-app/main/default/objects/Escalation_QA_Checklists__c/Escalation_QA_Checklists__c.object-meta.xml
<CustomObject>
    <description>Prior Name: Escalation &amp; QA Checklist</description>
    <label>Escalations</label>
    <nameField>
        <displayFormat>EQ-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>