force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Agent_Sends_Case_Number_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sends_Case_Number_Via_Email__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agent sends the case number via e-mail.
NICC 053612</description>
    <inlineHelpText>All cases from a phone call should contain an email from the initial case creator confirming case number.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Agent sends the case number via e-mail *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>