force-app/main/default/objects/Escalation_QA_Checklists__c/fields/All_Customer_Info_Captured_Updated__c.field-meta.xml
<CustomField>
    <fullName>All_Customer_Info_Captured_Updated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>All customer information captured (for creating a ticket- like hotel id, customer name, position etc).</description>
    <inlineHelpText>Correct contact tagged and/or contact details noted in case - Name, Email and Phone#.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>All customer info captured/updated *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>