force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Avoids_Unnecessary_Repetition__c.field-meta.xml
<CustomField>
    <fullName>Avoids_Unnecessary_Repetition__c</fullName>
    <description>Avoids unnecessary repetition and does not miss relevant information. Verbally displays
understanding of the issue through accurate paraphrasing.</description>
    <inlineHelpText>Does not miss relevant information causing the client to repeat themselves verbally or in writing.</inlineHelpText>
    <label>Avoids unnecessary repetition</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>