force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Brands_Correctly_Appreciates_Client__c.field-meta.xml
<CustomField>
    <fullName>Brands_Correctly_Appreciates_Client__c</fullName>
    <description>Brands appropriately and appreciates customer&apos;s business with us.</description>
    <inlineHelpText>Offers additional assistance and expresses appreciation for doing business with TravelClick.</inlineHelpText>
    <label>Brands correctly &amp; appreciates client</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>