force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Case_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Email__c</fullName>
    <formula>Related_Case__r.Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Contact Email</label>
    <type>Text</type>
</CustomField>