force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Client_Satisfaction_Completed__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Client Satisfaction Completed.</description>
    <inlineHelpText>Final follow up with the client completed to ensure understanding of issue/ability to log in/etc.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Client Satisfaction Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>