force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Cloned_And_Associated_Cases_As_Needed__c.field-meta.xml
<CustomField>
    <fullName>Cloned_And_Associated_Cases_As_Needed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Project 2122</description>
    <inlineHelpText>Case is cloned with child cases noted, and parent cases tagged on child cases.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Cloned and associated cases, as needed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>