force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Completed_Proper_Follow_Up_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Completed_Proper_Follow_Up_Procedure__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Follow up completed with customer as per SOP including confirmation of Client Satisfaction.
NICC 053612</description>
    <inlineHelpText>Follow up completed with customer as per SOP including confirmation of Customer Satisfaction.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Completed proper follow up procedure *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>