force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Confidence_In_Communication__c.field-meta.xml
<CustomField>
    <fullName>Confidence_In_Communication__c</fullName>
    <description>Displays confidence in communication throughout the e-mail using positive language.</description>
    <inlineHelpText>Avoids sounding insecure and utilizing filler words like UM and UH</inlineHelpText>
    <label>Confidence in communication</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>