force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Correct_Template_Chosen_For_Case__c.field-meta.xml
<CustomField>
    <fullName>Correct_Template_Chosen_For_Case__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Correct template chosen for case.</description>
    <inlineHelpText>Correct templates utilized throughout case handling.
POSSIBLE VALUES: 0, 1, 2, 3, 4, 5</inlineHelpText>
    <label>Correct template chosen for case</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>