force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Customer_Delight__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please select the below checkbox if the specialist went above and beyond, exceeding the customer’s expectation and creating a positive reaction. Project 3370</description>
    <inlineHelpText>Can only be given to accompany a perfect 5 score.</inlineHelpText>
    <label>Customer Delight</label>
    <type>Checkbox</type>
</CustomField>