force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>