force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Demonstrates_Product_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Demonstrates_Product_Knowledge__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Demonstrates product knowledge.
NICC 053612</description>
    <inlineHelpText>Demonstrates product knowledge and was self-sufficient in finding solutions.
POSSIBLE VALUES: 0, 1, 3, 5</inlineHelpText>
    <label>Demonstrates product knowledge</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>