force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Email_Notes__c.field-meta.xml
<CustomField>
    <fullName>Email_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E-mail Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>