force-app/main/default/objects/Escalation_QA_Checklists__c/fields/First_Day_Phone_Call_To_The_Customer__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Phone_Call_To_The_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calls client on first day of case ownership to recap their case details and confirm understanding of their request.</inlineHelpText>
    <label>First Day phone call to the customer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>