force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Focus_And_Displays_Call_Control__c.field-meta.xml
<CustomField>
    <fullName>Focus_And_Displays_Call_Control__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Exercises focus and displays call control.
NICC 053612</description>
    <inlineHelpText>Keeps call on track and controls the pace of the call with the customer.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Focus and displays call control *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>