force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Greeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Greeting_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Greeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>