force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Greets_Introduces_Brands__c.field-meta.xml
<CustomField>
    <fullName>Greets_Introduces_Brands__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enthusiastically greets person, introduces self, and brands appropriately.</description>
    <inlineHelpText>Enthusiastically greets person, introduces self, and brands appropriately.</inlineHelpText>
    <label>Greets, Introduces, Brands</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>