force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Hold_Procedure_Not_Exceeding_2_mins__c.field-meta.xml
<CustomField>
    <fullName>Hold_Procedure_Not_Exceeding_2_mins__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Hold Procedure: Sets expectation for hold not
exceeding 2 minutes and thanks the customer
for being on hold. Refreshes hold if necessary.</description>
    <inlineHelpText>Hold Procedure: Sets expectation for hold not exceeding 2 minutes and thanks the customer
for being on hold. Refreshes hold if necessary.</inlineHelpText>
    <label>Hold Procedure (not exceeding 2 min)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>