force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Initial_Follow_Up_Call_Capture_per_Cal__c.field-meta.xml
<CustomField>
    <fullName>Initial_Follow_Up_Call_Capture_per_Cal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agent confirmed with the customer that their email and phone number is accurate. NICC 053612</description>
    <inlineHelpText>Did the agent capture enough information for the case owner to identify the scope of the request?
POSSIBLE VALUES: 0, 1, 2, 3, 4, 5</inlineHelpText>
    <label>Initial/Follow  Up Call Capture -per SOP</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>