force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User__c</fullName>
    <formula>IF( Related_Case__r.Owner:User.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged in User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>