force-app/main/default/objects/Escalation_QA_Checklists__c/fields/My_QA_s__c.field-meta.xml
<CustomField>
    <fullName>My_QA_s__c</fullName>
    <formula>IF( Related_Case__r.OwnerId =  $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My QA&apos;s</label>
    <type>Checkbox</type>
</CustomField>