force-app/main/default/objects/Escalation_QA_Checklists__c/fields/New_Contact_Created_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Created_If_Applicable__c</fullName>
    <defaultValue>0</defaultValue>
    <description>New contact was created when applicable</description>
    <inlineHelpText>If the contact does not exist, and should be created in SF</inlineHelpText>
    <label>New contact created (if applicable)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>