force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Notes_Comments_Made_And_Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments_Made_And_Actions_Taken__c</fullName>
    <description>Appropriate notes / comments made and actions taken. Problem descriptions are accurate and concise.</description>
    <inlineHelpText>Notes should be completed during each case interaction and include findings, pending items, AND all actions taken to resolve (per team SOP). Emails received and sent should also be summarized.</inlineHelpText>
    <label>Notes/comments made &amp; actions taken</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>