force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Offers_Additional_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Offers_Additional_Assistance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Offers additional assistance (details on mail to call/write back for clarification/queries).</description>
    <inlineHelpText>Offers additional assistant to client</inlineHelpText>
    <label>Offers additional assistance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>