force-app/main/default/objects/Escalation_QA_Checklists__c/fields/QA_Reason__c.field-meta.xml
<CustomField>
    <fullName>QA_Reason__c</fullName>
    <label>QA Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Processing</fullName>
            </value>
            <value>
                <fullName>Customer Complaint</fullName>
            </value>
            <value>
                <fullName>HOD Update</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Rate Loading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>