force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Questins_Answered2__c.field-meta.xml
<CustomField>
    <fullName>Questins_Answered2__c</fullName>
    <formula>Case(Correct_Template_Chosen_For_Case__c,0,0,1)+
Case(Demonstrates_Product_Knowledge__c,0,0,1)+
Case(Final_Email_All_Issues_Addressed__c,0,0,1)+
Case(Notes_Comments_Made_And_Actions_Taken__c,0,0,1)+
Case(Uses_Customers_Name__c,0,0,1)+
Case(Acknowledges_Displays_Understands_Issue__c,0,0,1)+
Case(All_Customer_Info_Captured_Updated__c,0,0,1)+
Case(Uses_Professional_Lang_Tone_On_Call__c,0,0,1)+
Case(Demonstrates_Empathy_Apology_Statements__c,0,0,1)+
Case(Offers_Additional_Assistance__c,0,0,1)+
Case(First_Day_Acknowledgement_Of_Request__c,0,0,1)+
Case(Brands_Correctly_Appreciates_Client__c,0,0,1)+
Case(Correct_Grammar_Spelling_Punctuation__c,0,0,1)+
Case(Directed_Client_To_Online_Help_Or_LS__c,0,0,1)+
Case(Issue_Not_Resolved_FCR_Next_Steps__c,0,0,1)+
Case(All_Steps_Are_Taken_To_Resolve__c,0,0,1)+
Case(Avoids_Long_Pauses_Dead_Air__c,0,0,1)+
Case(Client_Satisfaction_Completed__c,0,0,1)+
Case(Confidence_In_Communication__c,0,0,1)+
Case(Adequately_Assisted_Customer__c,0,0,1)+
Case(Agent_Sends_Case_Number_Via_Email__c,0,0,1)+
Case(Focus_And_Displays_Call_Control__c,0,0,1)+
Case(Response_Addressed_Correct_Recipients__c,0,0,1)+
Case(New_Contact_Created_If_Applicable__c,0,0,1)+
Case(Refers_Transfer_To_Correct_Department__c,0,0,1)+
Case(All_Client_Emails_Answered_And_Actioned__c,0,0,1)+
Case(Avoids_Unnecessary_Repetition__c,0,0,1)+
Case(Cloned_And_Associated_Cases_As_Needed__c,0,0,1)+
Case(Customized_Template_If_Needed__c,0,0,1)+
Case(First_Day_Phone_Call_To_The_Customer__c,0,0,1)+
Case(Key_Account_Expectation_Set__c,0,0,1)+
Case(Provided_CaseNumber_To_Client_Verbally__c,0,0,1)+
Case(Tagged_Correct_Property__c,0,0,1)+
Case(Updated_Request_Count_Correctly__c,0,0,1)+
Case(Uses_Proper_Hold_Procedures__c,0,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questions Answered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>