force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Questions_Answered__c.field-meta.xml
<CustomField>
    <fullName>Questions_Answered__c</fullName>
    <description>This field was used prior to the implementation of project 2122.</description>
    <formula>Case(Correct_Template_Chosen_For_Case__c,0,0,1)+
Case(Demonstrates_Product_Knowledge__c ,0,0,1)+
Case(Final_Email_All_Issues_Addressed__c ,0,0,1)+
Case(Notes_Comments_Made_And_Actions_Taken__c  ,0,0,1)+
Case(Greets_Introduces_Brands__c ,0,0,1)+
Case(Uses_Customers_Name__c ,0,0,1)+
Case(Accurate_And_Complete_Information_Given__c ,0,0,1)+
Case(Acknowledges_Displays_Understands_Issue__c ,0,0,1)+
Case(All_Customer_Info_Captured_Updated__c ,0,0,1)+
Case(Uses_Professional_Lang_Tone_On_Call__c ,0,0,1)+
Case(Demonstrates_Empathy_Apology_Statements__c ,0,0,1)+
Case(Offers_Additional_Assistance__c ,0,0,1)+
Case(First_Day_Acknowledgement_Of_Request__c ,0,0,1)+
Case(Brands_Correctly_Appreciates_Client__c ,0,0,1)+
Case(Correct_Grammar_Spelling_Punctuation__c ,0,0,1)+
Case(Directed_Client_To_Online_Help_Or_LS__c ,0,0,1)+
Case(Hold_Procedure_Not_Exceeding_2_mins__c ,0,0,1)+
Case(Issue_Not_Resolved_FCR_Next_Steps__c ,0,0,1)+
Case(Advises_Customer_CaseNum_Will_Be_Emailed__c ,0,0,1)+
Case(All_Steps_Are_Taken_To_Resolve__c ,0,0,1)+
Case(Avoids_Long_Pauses_Dead_Air__c ,0,0,1)+
Case(Client_Satisfaction_Completed__c ,0,0,1)+
Case(Confidence_In_Communication__c ,0,0,1)+
Case(Adequately_Assisted_Customer__c ,0,0,1)+
Case(Agent_Sends_Case_Number_Via_Email__c ,0,0,1)+
Case(Focus_And_Displays_Call_Control__c ,0,0,1)+
Case(Response_Addressed_Correct_Recipients__c  ,0,0,1)+
Case(New_Contact_Created_If_Applicable__c  ,0,0,1)+
Case(Refers_Transfer_To_Correct_Department__c  ,0,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questions Answered*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>