force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalation_QA_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>