force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Related_Case_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Contact__c</fullName>
    <formula>HYPERLINK(Related_Case__r.ContactId  ,Related_Case__r.Contact.FirstName &amp; &quot; &quot; &amp; Related_Case__r.Contact.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Contact</label>
    <type>Text</type>
</CustomField>