force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Related_Case_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Product__c</fullName>
    <formula>TEXT( Related_Case__r.Product_TC__c )</formula>
    <label>Related Case Product</label>
    <type>Text</type>
</CustomField>