force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Related_Property_1__c.field-meta.xml
<CustomField>
    <fullName>Related_Property_1__c</fullName>
    <formula>HYPERLINK(Account_ID__c ,Related_Case__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Property</label>
    <type>Text</type>
</CustomField>