force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Escalation &amp; QA Checklist issue resolved by - user name</description>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalation_QA_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>