force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Response_Addressed_Correct_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Response_Addressed_Correct_Recipients__c</fullName>
    <defaultValue>0</defaultValue>
    <description>E-mail response is addressed to the correct recipient and all the correct people have been copied.</description>
    <inlineHelpText>Greeting is addressed to correct recipient, and all other appropriate parties (internal or external) are included on the email.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Response addressed correct recipients *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>