force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Root_Cause_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_Completed__c</fullName>
    <label>Root Cause Analysis Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>