force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Used to calculate Escalation/QA score. Updated with Project project 2122. Project#3370
NICC 053612</description>
    <formula>(Question_Score_Sum__c / Questions_Answered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>