force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Submitter_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Role__c</fullName>
    <formula>$UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter Role</label>
    <type>Text</type>
</CustomField>