force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Uses_Customers_Name__c.field-meta.xml
<CustomField>
    <fullName>Uses_Customers_Name__c</fullName>
    <description>Uses customer&apos;s name in a conversational
manner.</description>
    <inlineHelpText>Utilizes the customer’s name throughout the length of the call a minimum of 3 times.</inlineHelpText>
    <label>Uses customer&apos;s name *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>