force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Uses_Proper_Hold_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Uses_Proper_Hold_Procedures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>project 2122
NICC 053612</description>
    <inlineHelpText>After the second hold, the customer should be presented with the option for a call back or to hold longer.
POSSIBLE VALUES: 0, 1, 5</inlineHelpText>
    <label>Uses proper hold procedures &lt;  2 mins *</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>