force-app/main/default/objects/Escalation_QA_Checklists__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cybage</fullName>
            </value>
            <value>
                <fullName>IGT</fullName>
            </value>
            <value>
                <fullName>Serco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>