force-app/main/default/objects/Escalation_QA_Checklists__c/recordTypes/Customer_Care_Quality_Form.recordType-meta.xml
<RecordType>
    <fullName>Customer_Care_Quality_Form</fullName>
    <active>true</active>
    <description>Customer Support QA Form</description>
    <label>Customer Support QA Form</label>
</RecordType>