force-app/main/default/objects/Escalation_QA_Checklists__c/recordTypes/Escalation_Page.recordType-meta.xml
<RecordType>
    <fullName>Escalation_Page</fullName>
    <active>true</active>
    <description>Escalation Page</description>
    <label>Escalation Page</label>
</RecordType>