force-app/main/default/objects/Escalation_QA_Checklists__c/recordTypes/Standard_QA_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Standard_QA_Checklist</fullName>
    <active>true</active>
    <label>Standard QA Checklist</label>
</RecordType>