force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Acknowledges_and_displays_and_understand.validationRule-meta.xml
<ValidationRule>
    <fullName>Acknowledges_and_displays_and_understand</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4.</description>
    <errorConditionFormula>OR (
    Acknowledges_Displays_Understands_Issue__c = 2,
    Acknowledges_Displays_Understands_Issue__c = 3,
    Acknowledges_Displays_Understands_Issue__c = 4,
    Acknowledges_Displays_Understands_Issue__c &gt; 5
)</errorConditionFormula>
    <errorDisplayField>Acknowledges_Displays_Understands_Issue__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO or 5 for YES.</errorMessage>
</ValidationRule>