force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Acknowledges_and_Displays_Understanding.validationRule-meta.xml
<ValidationRule>
    <fullName>Acknowledges_and_Displays_Understanding</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4. IV- Project 3370: allow value 3</description>
    <errorConditionFormula>Or(
First_Day_Acknowledgement_Of_Request__c = 2,
First_Day_Acknowledgement_Of_Request__c = 4,
First_Day_Acknowledgement_Of_Request__c &gt; 5

)</errorConditionFormula>
    <errorDisplayField>First_Day_Acknowledgement_Of_Request__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO, 3 for PARTIALLY COMPLETED or 5 for YES.</errorMessage>
</ValidationRule>