force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Adequately_Assisted_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Adequately_Assisted_Customer</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4.</description>
    <errorConditionFormula>Or(
Adequately_Assisted_Customer__c = 2,
Adequately_Assisted_Customer__c = 3,
Adequately_Assisted_Customer__c = 4,
Adequately_Assisted_Customer__c &gt; 5
)</errorConditionFormula>
    <errorDisplayField>Adequately_Assisted_Customer__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO or 5 for YES.</errorMessage>
</ValidationRule>