force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Agent_Sends_the_Case_Number_via_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_Sends_the_Case_Number_via_Email</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4.</description>
    <errorConditionFormula>Or(
Agent_Sends_Case_Number_Via_Email__c = 2,
Agent_Sends_Case_Number_Via_Email__c = 3,
Agent_Sends_Case_Number_Via_Email__c = 4,
Agent_Sends_Case_Number_Via_Email__c &gt; 5
)</errorConditionFormula>
    <errorDisplayField>Agent_Sends_Case_Number_Via_Email__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO or 5 for YES.</errorMessage>
</ValidationRule>