force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/All_Customer_Emails_Acknowledged.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Customer_Emails_Acknowledged</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4.</description>
    <errorConditionFormula>Or(
All_Client_Emails_Answered_And_Actioned__c = 2,
All_Client_Emails_Answered_And_Actioned__c = 3,
All_Client_Emails_Answered_And_Actioned__c = 4,
All_Client_Emails_Answered_And_Actioned__c &gt; 5
)</errorConditionFormula>
    <errorDisplayField>All_Client_Emails_Answered_And_Actioned__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO or 5 for YES.</errorMessage>
</ValidationRule>