force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/All_Steps_are_taken_to_Resolve.validationRule-meta.xml
<ValidationRule>
    <fullName>All_Steps_are_taken_to_Resolve</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4.</description>
    <errorConditionFormula>Or(
All_Steps_Are_Taken_To_Resolve__c = 2,
All_Steps_Are_Taken_To_Resolve__c = 3,
All_Steps_Are_Taken_To_Resolve__c = 4,
All_Steps_Are_Taken_To_Resolve__c &gt; 5

)</errorConditionFormula>
    <errorDisplayField>All_Steps_Are_Taken_To_Resolve__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO or 5 for YES.</errorMessage>
</ValidationRule>