force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Appropriate_Use_of_Language_and_Grammer.validationRule-meta.xml
<ValidationRule>
    <fullName>Appropriate_Use_of_Language_and_Grammer</fullName>
    <active>true</active>
    <description>Value can not be greater than 5</description>
    <errorConditionFormula>Uses_Professional_Lang_Tone_On_Call__c  &gt; 5</errorConditionFormula>
    <errorDisplayField>Uses_Professional_Lang_Tone_On_Call__c</errorDisplayField>
    <errorMessage>Please update your value to be between 0 and 5.</errorMessage>
</ValidationRule>