force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Avoids_Long_Pauses.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoids_Long_Pauses</fullName>
    <active>true</active>
    <description>Value can not be 2,3 or 4.</description>
    <errorConditionFormula>Or(
Avoids_Long_Pauses_Dead_Air__c = 2,
Avoids_Long_Pauses_Dead_Air__c = 3,
Avoids_Long_Pauses_Dead_Air__c = 4,
Avoids_Long_Pauses_Dead_Air__c &gt; 5

)</errorConditionFormula>
    <errorDisplayField>Avoids_Long_Pauses_Dead_Air__c</errorDisplayField>
    <errorMessage>Please update your value to 0 for N/A, 1 for NO or 5 for YES.</errorMessage>
</ValidationRule>