force-app/main/default/objects/Escalation_QA_Checklists__c/validationRules/Avoids_Unnecessary_Repetition.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoids_Unnecessary_Repetition</fullName>
    <active>true</active>
    <description>Value can not be greater than 5</description>
    <errorConditionFormula>Avoids_Unnecessary_Repetition__c   &gt; 5</errorConditionFormula>
    <errorDisplayField>Avoids_Unnecessary_Repetition__c</errorDisplayField>
    <errorMessage>Please update your value to be between 0 and 5.</errorMessage>
</ValidationRule>